@@ -33,6 +33,9 @@
   <Anty_Amigo_B_Rangedinfantry.title>앤티 원거리 보병</Anty_Amigo_B_Rangedinfantry.title>
   <Anty_Amigo_B_Rangedinfantry.titleShort>원거리 보병</Anty_Amigo_B_Rangedinfantry.titleShort>
   <Anty_Amigo_B_Rangedinfantry.baseDescription>[PAWN_nameDef](은)는 원거리 보병입니다.\n\n 앤티들은 근접전을 선호하지만 제대로 된 전쟁을 하기 위해서는 원거리에서의 교전이 필요했기에 생겨난 병종입니다.\n\n 보통 비교적 신체능력이 떨어지거나 사격에 재능이 있는 개체들이 선발되고, 모든 종류의 원거리 무기를 다룰 수 있도록 혹독한 훈련을 받습니다.</Anty_Amigo_B_Rangedinfantry.baseDescription>
+  <Anty_Amigo_B_Rangedinfantry_Drop.title>앤티 원거리 보병</Anty_Amigo_B_Rangedinfantry_Drop.title>
+  <Anty_Amigo_B_Rangedinfantry_Drop.titleShort>원거리 보병</Anty_Amigo_B_Rangedinfantry_Drop.titleShort>
+  <Anty_Amigo_B_Rangedinfantry_Drop.baseDescription>[PAWN_nameDef](은)는 원거리 보병입니다.\n\n 앤티들은 근접전을 선호하지만 제대로 된 전쟁을 하기 위해서는 원거리에서의 교전이 필요했기에 생겨난 병종입니다.\n\n 보통 비교적 신체능력이 떨어지거나 사격에 재능이 있는 개체들이 선발되고, 모든 종류의 원거리 무기를 다룰 수 있도록 혹독한 훈련을 받습니다.</Anty_Amigo_B_Rangedinfantry_Drop.baseDescription>
   <Anty_Amigo_B_Meleeinfantry.title>앤티 근거리 보병</Anty_Amigo_B_Meleeinfantry.title>
   <Anty_Amigo_B_Meleeinfantry.titleShort>근거리 보병</Anty_Amigo_B_Meleeinfantry.titleShort>
   <Anty_Amigo_B_Meleeinfantry.baseDescription>[PAWN_nameDef](은) 근거리 보병입니다.\n\n 앤티가 생겨난 시점부터 존재했던 병종으로 앤티 인구의 30%를 차지합니다.\n\n 보통 비교적 신체능력이 뛰어나거나 죽음에 대한 두려움이 적은 개체들이 선발되고, 모든 종류의 근거리 무기를 다룰 수 있도록, 그리고 아군과 적군의 포화 속으로 거리낌 없이 돌격할 수 있도록 혹독한 훈련을 받습니다.</Anty_Amigo_B_Meleeinfantry.baseDescription>
