@@ -40,3 +40,7 @@ ThingDef : <EggProtyUn.description>
 
 (2021/10/20)
 ThingDef : <AT_AP_CO_A.description> , <AT_AP_CO_B.description>
+
+(2021/11/1)
+AlienRace.BackstoryDef
+  Anty_Amigo_B_Rangedinfantry_Drop .title .titleShort .baseDescription
